Sat Jul  2 03:09:27 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* string.c: Partially reverts r55547 and r55555.
	  ChangeLog about the reverted changes are also deleted in this file.
	  [Bug #12536] [ruby-dev:49699] [ruby-dev:49702]

Sat Jul  2 02:22:22 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* string.c (str_fill_term): When termlen increases, re-allocation
	  of memory for termlen should always be needed.
	  In this fix, if possible, decrease capa instead of realloc.
	  [Bug #12536] [ruby-dev:49699]

Fri Jul  1 20:20:20 2016  Naohisa Goto  <ngotogenome@gmail.com>

  	* string.c: Specify termlen as far as possible.
	  Additional fix for [Bug #12536] [ruby-dev:49699].

	* string.c (str_new_static): Specify termlen from the given encoding
	  when creating a new String object is needed.

	* string.c (rb_tainted_str_new_with_enc): New function to create a
	  tainted String object with the given encoding. This means that
	  the termlen is correctly specified. Curretly static function.
	  The function name might be renamed to rb_tainted_enc_str_new
	  or rb_enc_tainted_str_new.

	* string.c (rb_external_str_new_with_enc): Use encoding by using the
	  above rb_tainted_str_new_with_enc().

Fri Jul  1 19:38:57 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* test/fiddle/test_pointer.rb (test_to_str, test_to_s, test_aref_aset):
	  Attempt to use independent strings for destructive tests that
	  directly modify values on memory by using Fiddle::Pointer.
	  [Bug #12537] [ruby-dev:49700]

Fri Jul  1 18:20:00 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* .gdbinit (rb_ps_thread): show the detail of cfunc in ruby level
	  backtrace.

Fri Jul  1 13:26:39 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* string.c (rb_str_subseq, str_substr): When RSTRING_EMBED_LEN_MAX
	  is used, TERM_LEN(str) should be considered with it because
	  embedded strings are also processed by TERM_FILL.
	  Additional fix for [Bug #12536] [ruby-dev:49699].
